# capstone

backend/: .gitignore  pyproject.toml
backend/app/: database.py  lifespan.py  main.py
backend/app/core/: config.py  security.py
backend/app/core/security/: dependencies.py  token.py
backend/app/models/: kis_token.py  kis_token_model.py  refresh_token.py  social_account.py  user.py  user_model.py  user_stock.py
backend/app/routers/: stock.py  users.py  users_auth.py  ws_router.py
backend/app/routers/auth/: token.py  user_default.py  user_general.py  user_social.py
backend/app/schemas/: token.py  user.py  user_schemas.py
backend/app/services/: kis_auth.py  kis_auth_test.py  kis_data.py  kis_ws.py  stock_info.py  user_services.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/components/: Header.jsx  Layout.jsx  NotLogin.jsx  Sidebar.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/lib/: axios.js
frontend/src/pages/: Home.jsx  LoginPage.jsx  MainPage.jsx  MarketPage.jsx  MyFavorite.jsx  MyInfo.jsx  MyInvestList.jsx  SignUpPage.jsx  SocialCallbackPage.jsx  StockDetail.jsx  myCategory.jsx
frontend/src/styles/: App.css  AuthPage.css  Home.css  Layout.css  MyInfo.css  NotLogin.css  StockDetail.css  index.css
